# wood_cutting_optimizer

./: README.md  pyproject.toml  wood_cutting_optimizer.py  木取.xlsx
