[tool.poetry]
name = "knapsack"
version = "0.1.0"
description = ""
authors = ["nkimoto <kimoppy126@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
pyinstaller = "^6.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
